@@ -2,10 +2,16 @@ package org.practica1debasesdedatosrelacionales.domain;
 
 import org.practica1debasesdedatosrelacionales.Exceptions.DniException;
 
+import java.util.Random;
+import java.util.concurrent.ThreadLocalRandom;
+import java.util.stream.IntStream;
+
 public class DNI {
 
     private Integer number;
     private char letter;
+
+    private static final String letras = "TRWAGMYFPDXBNJZSQVHLCKE";
 
     /**
      * Calculamos la letra del DNI y validamos si es la que debe ser, en caso de no serlo,
@@ -18,7 +24,6 @@ public class DNI {
             throw new DniException("El DNI tiene no 9 caracteres, debe tener 8 numeros y una letra");
         }
 
-        String letras = "TRWAGMYFPDXBNJZSQVHLCKE";
 
         StringBuilder numbers   = new StringBuilder();
         char supuesta_letra     = 0;
@@ -38,10 +43,25 @@ public class DNI {
                 this.number % letras.length());
 
         if (letter != supuesta_letra) {
-            throw new DniException("El DNI no es valido, la letra ingresada es %c, pero deberia ser %c".formatted(
-                    supuesta_letra, this.letter
-            ));
+            throw new DniException(String.format("El DNI %s no es valido, la letra ingresada es %c, pero deberia ser %c", this.number, supuesta_letra, this.letter));
+
         }
+    }
+
+    /**
+     * Genera un DNI aleatorio válido (8 dígitos + letra)
+     * @return un objeto DNI válido generado aleatoriamente
+     */
+    public static DNI generarDniAleatorio () {
+        StringBuilder numero_str = new StringBuilder();
+        // generar 8 numeros del 0 al 9 para el DNI
+        IntStream.range(0, 8).forEach(value -> {
+            numero_str.append(new Random().nextInt(0, 9));
+        });
+        int numero = Integer.parseInt(String.valueOf(numero_str));
+        char letra = letras.charAt(numero % letras.length());
+        String dniGenerado = String.format("%08d%c", numero, letra);
+        return new DNI(dniGenerado);
     }
 
     public Integer getNumber() {
@@ -61,7 +81,7 @@ public class DNI {
     }
 
     String getDNI() {
-        return "%d%c".formatted(this.number, this.letter);
+        return String.format("%08d%c", this.number, this.letter);
     }
 
     @Override
